--- a/Frameworks/AppCoreKit.framework/Documentation/com.smorel.AppCoreKit.docset/Contents/Resources/Documents/Classes/CKPropertySelectionViewController.html
+++ b/Frameworks/AppCoreKit.framework/Documentation/com.smorel.AppCoreKit.docset/Contents/Resources/Documents/Classes/CKPropertySelectionViewController.html
@@ -159,7 +159,7 @@
 						<h2 class="subtitle subtitle-overview">Overview</h2>
 						<p>CKPropertySelectionViewController provides the logic to edit and synchronize changes to/from an Enum, Bitfield, array, collection or object property by providing single or multiselection mechanism with the desired degree of customization. MultiSelection is enabled by default in case the property is an array or a bit mask.</p>
 
-<p>The values and labels can be specified by using some of the init method provided in CKPropertySelectionViewController or by using the CKEnumDescriptor or valuesAndLabels set to your property extended attributes. Implements this in the class owning your property:</p>
+<p>The values and labels can be specified by using some of the init method provided in CKPropertySelectionViewController or by using the <a href="../Classes/CKEnumDescriptor.html">CKEnumDescriptor</a> or valuesAndLabels set to your property extended attributes. Implements this in the class owning your property:</p>
 
 <ul>
 <li>(void)myPropertyExtendedAttributes:(<a href="../Classes/CKPropertyExtendedAttributes.html">CKPropertyExtendedAttributes</a>*)attributes{
