--- a/Frameworks/AppCoreKit.framework/Documentation/com.smorel.AppCoreKit.docset/Contents/Resources/Documents/Classes/CKStandardContentViewController.html
+++ b/Frameworks/AppCoreKit.framework/Documentation/com.smorel.AppCoreKit.docset/Contents/Resources/Documents/Classes/CKStandardContentViewController.html
@@ -214,7 +214,7 @@
                 (font, textColor, margins, ...)
           },
 
-          "UIImageView[name=ImageView]" : {
+          "CKImageView[name=ImageView]" : {
           }
      }
 }
